--- a/src/main/webapp/Who-Am-I-comics/css/who-am-i-frames.css
+++ b/src/main/webapp/Who-Am-I-comics/css/who-am-i-frames.css
@@ -26,11 +26,29 @@
     width: 1200px;
     height: 709px;
     background-image: url("../image/staring-dark-01.jpg");
-    -moz-animation: blinking 2s;
-    -webkit-animation: blinking 2s;
+    -moz-animation: blinking 2s infinite;
+    -webkit-animation: blinking 2s infinite;
     -webkit-animation-iteration-count: infinite;
+    -o-animation: blinking 2s infinite;
+    animation-timing-function: linear;
     -webkit-animation-timing-function: linear;
-    -o-animation: blinking 2s;
+    -moz-animation-timing-function: linear;
+    -o-animation-timing-function: linear;
+}
+
+@keyframes blinking {
+    0%  { opacity: 0; }
+    20% { opacity: 0; }
+    21% { opacity: 1; }
+    30% { opacity: 1; }
+    31% { opacity: 0; }
+    70% { opacity: 0; }
+    71% { opacity: 1; }
+    75% { opacity: 1; }
+    76% { opacity: 0; }
+    81% { opacity: 0; }
+    82% { opacity: 1; }
+    99% { opacity: 1; }
 }
 
 @-webkit-keyframes blinking {
